[EFL] [WK2] fast/dom/vertical-scrollbar-in-rtl.html makes fast/regions tests flaky https://bugs.webkit.org/show_bug.cgi?id=104139

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-12-06
Reviewed by Kenneth Rohde Christiansen.

Resize the window back to 800x600 between tests.
This should be a no-op if the test did not resize the window.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):

Canonical link: https://commits.webkit.org/122402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136825 268f45cc-cd09-0410-ab3c-d52691b4dbfc